# MxGPU-Virtualization

./: .gitignore  LICENSE  Makefile  README.md  VERSION
dkms/: configure.ac  get-version  pre-build
dkms/m4/: class_create.m4  crypto_hash_digest.m4  dcore_devnode.m4  decode_speed.m4  ftrace.m4  get_user_pages_remote.m4  kernel.m4  kernel_single_target.m4  kfree_sensitive.m4  linux-headers.m4  loff_t_variable.m4  pci_alloc_irq_vectors.m4  pci_bridge_secondary_bus_reset.m4  poll_t.m4  pxm_to_node.m4  rtc_ktime_to_tm.m4  up_down_read.m4  vfio_pin_pages.m4  vfs_unlink.m4  vprintk_emit.m4
gim-coms-lib/: Makefile  defines.mk  gim-coms-lib.mk
gim-coms-lib/inc/: amdgv_cmd_def.h  dcore_ioctl.h  gim_fd_list.h  gim_ioctl.h  gim_ioctl_msghdr.h  smi_cmd_def.h
gim-coms-lib/src/: gim_fd_list.c  gim_ioctl.c  gim_ioctl_msghdr.c
gim_shim/: Makefile  dcore_drv.c  dcore_drv.h  dcore_ioctl.h  gim.h  gim_baco_power_saving.c  gim_baco_power_saving.h  gim_config.c  gim_config.h  gim_drv.c  gim_error.c  gim_error.h  gim_ftrace.c  gim_ftrace.h  gim_gpumon.c  gim_gpumon.h  gim_live_update.c  gim_live_update.h  gim_os_service.c
gim_shim/sysfs/: Makefile  amdgv_cmd.c  amdgv_cmd.h  gim_debug.h  gim_debugfs.c  gim_debugfs.h  gim_guard.c  gim_guard.h  gim_monitor.c  gim_monitor.h
libgv/: Makefile
libgv/core/: Makefile  amdgv.h  amdgv_api.c  amdgv_api_internal.c  amdgv_api_internal.h  amdgv_basetypes.h  amdgv_clockgating.h  amdgv_common_eeprom.h  amdgv_cper.c  amdgv_cper.h  amdgv_debug.c  amdgv_debug.h  amdgv_device.c  amdgv_device.h  amdgv_df.h  amdgv_diag_data.c  amdgv_diag_data.h  amdgv_diag_data_exclude_list.c  amdgv_diag_data_gen_info.h  amdgv_diag_data_host_drv.c  amdgv_diag_data_host_drv.h  amdgv_diag_data_trace_log.h  amdgv_dirtybit.c  amdgv_dirtybit.h  amdgv_ecc.c  amdgv_ecc.h  amdgv_error.c  amdgv_error_internal.h  amdgv_error_subcode.c  amdgv_ffbm.c  amdgv_ffbm.h  amdgv_gart.c  amdgv_gart.h  amdgv_gfx.c  amdgv_gfx.h  amdgv_gpuiov.c  amdgv_gpuiov.h  amdgv_gpumon.c  amdgv_gpumon_internal.c  amdgv_gpumon_internal.h  (+72 more)
libgv/core/atombios/: Makefile  atom-bits.h  atom-names.h  atom-types.h  atom.c  atom.h  atombios.c  atombios.h  atomfirmware.c  atomfirmware.h  atomfirmwareid.h
libgv/inc/: amd_cper.h  amdgv_api.h  amdgv_asic.h  amdgv_error.h  amdgv_gpumon.h  amdgv_oss.h  amdgv_sriovmsg.h  rlcv_sched_config_interface.h
package/: README.md
package/deb/: changelog  control  gim-dkms.dkms  rules
package/rpm/: gim-dkms.spec
smi-lib/: .gitignore  .readthedocs.yaml  LICENSE  Makefile  VERSION  define_linux.mk  defines.mk  pre-commit
smi-lib/cli/cpp/: Makefile
smi-lib/cli/cpp/cmake/linux/: CMakeLists.txt
smi-lib/docs/: conf.py  index.md  license.md  requirements.txt
smi-lib/docs/doxygen/: .gitignore  Doxyfile
smi-lib/docs/how_to/: amdsmi_c_lib.md  amdsmi_cli_tool.md  amdsmi_py_lib.md
smi-lib/drv/: Makefile
smi-lib/examples/: Makefile
smi-lib/inc/: smi_debug.h  smi_defines.h  smi_sys_wrapper.h  smi_thread.h  smi_utils.h  smi_vcs.h
smi-lib/interface/: amdsmi.h
smi-lib/src/: amdsmi.c  smi_defines.c  smi_utils.c  smi_vcs.c
smi-lib/tests/: Makefile
(+300 files in other folders)
